# amazon-automation-tests

./: .gitignore  README.md  pyproject.toml
amazon/: app.py
amazon/model/controls/: dropdown.py
amazon/model/data/: user.py
amazon/model/pages/: base_page.py  cart_page.py  customer_service_page.py  front_page.py  gift_cards_page.py  product_page.py  search_results_page.py  sell_page.py
amazon/utils/: attach.py
tests/: conftest.py  test_cart.py
tests/api/: test_something.py
tests/mobile/: test_some_mobile_tests.py
tests/web-ui/: test_become_seller.py  test_cart.py  test_customer_service.py  test_gift_card.py
