[tool.poetry]
name = "amazon-automation-tests"
version = "0.1.0"
description = "Automated web-ui, api and mobile tests for amazon"
authors = ["Fatalwgx <nothingfatalleo@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.2.0"
selene = "^2.0.0b14"
allure-pytest = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--alluredir=allure-results --clean-alluredir"
